<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_description">Splash</string>
    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="title_activity_google_map">Google Map</string>
    <string name="buttonCreate">Create Profile</string>
    <string name="et_name">Name</string>
    <string name="et_date_of_birth">Date Of Birth</string>
    <string name="et_gender">Gender</string>
    <string name="et_height">Height</string>
    <string name="et_weight">Weight</string>
    <string name="et_bloodgroup">Blood Group</string>
    <string name="title_activity_home">I Care</string>
    <string name="tv_doctor_profile">Doctor Profile</string>
    <string name="button_save">SAVE</string>
    <string name="et_specialization">Specialization</string>
    <string name="et_phone">Phone</string>
    <string name="et_email">Email</string>
    <string name="et_address">Address</string>
    <string name="tv_add_vaccine">Add Vaccine</string>
    <string name="et_date">Date</string>
    <string name="et_time">Time</string>
    <string name="et_status">Status</string>
    <string name="tv_date">Date : </string>
    <string name="tv_time">Time : </string>
    <string name="tv_status">Status : </string>
    <string name="et_note">Note</string>
    <string name="tv_add_notes">Add Notes</string>
    <string name="et_title">Title</string>
    <string name="et_subject">Subject</string>
    <string name="et_description">Description</string>
    <string name="tv_profile_details">Profile Details</string>
    <string name="image_description">Image Description</string>
    <string name="button_update">UPDATE</string>
    <string name="button_take_photo">TAKE PHOTO</string>
    <string name="tv_add_medical_history">Add Medical History</string>
    <string name="button_capture_prescription">Prescription</string>
    <string name="et_doctor_name">Doctor Name</string>
    <string name="et_purpose">Purpose</string>
    <string name="et_suggestion">Suggestion</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="view_profile">Profile</string>
    <string name="tv_profile_name">Name: </string>
    <string name="tv_profile_dateofbirth">Date Of Birth: </string>
    <string name="tv_profile_gender">Gender: </string>
    <string name="tv_profile_height">Height: </string>
    <string name="tv_profile_weight">Weight: </string>
    <string name="tv_profile_blodgroup">Blood Group: </string>
    <string name="update_profile">Update</string>
    <string name="delete_profile">Delete</string>
    <string name="successfully_saved">Successfully Saved</string>
    <string name="not_saved">Not Saved</string>
    <string name="not_croped">Crop Not Performed</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="title_activity_view_profile">Profile</string>
    <string name="take_from_camera">Take From Camera</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="select_option">Select Option</string>
    <string name="successfully_update">Successfully Update</string>
    <string name="not_update">Not Update</string>
    <string name="vaccination_given">Vaccination Given</string>
    <string name="tv_doctor_name">Doctor Name: </string>
    <string name="tv_purpose">Purpose: </string>
    <string name="tv_suggesstion">Suggestion: </string>
    <string name="tv_details">Details</string>
    <string name="tv_prescription">Prescription </string>
    <string name="title_daily_diet">Daily Diet List</string>
    <string name="title_weekly_diet">Weekly Diet List </string>
    <string name="title_all_diet">All Diet List </string>
    <string name="title_breakfast">Breakfast</string>
    <string name="title_snacks_morning">Snacks-Morning</string>
    <string name="title_lunch">Lunch</string>
    <string name="title_snacks_afternoon">Snacks-Afternoon</string>
    <string name="title_dinner">Dinner</string>
    <string name="et_food_item">Food Items</string>
    <string name="duplicate_data">Dublicate Data Entry</string>
    <string name="duplicate_data_message">You have already set Diet chart. For changes Please update data.</string>
    <string name="error_time">Set Time</string>
    <string name="error_food_item">Set Food Item</string>
    <string name="alert_ok">OK</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="tv_today">Today</string>
    <string name="tv_upcoming">Upcoming</string>
    <string name="tv_food_menue">Food Items: </string>
    <string name="fetchingRoute">Fetching Route</string>
    <string name="hc_one">United Hospital</string>
    <string name="hc_two">Appolo Hospital</string>
    <string name="hc_three">MediNova Medical</string>
    <string name="hc_four">Armi Hospital</string>
    <string name="hc_five">BIRDEM Hospital</string>
    <string name="no_data_delete">No Data To Delete</string>
    <string name="no_data_update">No Data To Update. Please Insert Data First.</string>
    <string name="tv_about">I Care is a personal health management android application. I care is very helpful for maintaining everyday health information. I Care includes: maintaining diet Plan, save doctor information, prescription, address, call and email doctor, show nearest hospital, keep important note, get health information etc.</string>
	<string name="tv_copyright">©2015 Fast Track Future Leader. All rights reserved.</string>
	   <string name="tv_general_info">General Information</string>
	   <string name="tv_general_content_one">Understanding your child\'s changing and emerging growth and development is an important part of parenting. As infants and children progress through a series of growth stages, they may encounter physical and emotional challenges, and some relatively common problems during these years.</string>
<string name="tv_general_content_two">Growth and development includes not only the physical changes that will occur from infancy to adolescence, but also some of the changes in emotions, personality, behavior, thinking, and speech that children develop as they begin to understand and interact with the world around them. Listed in the directory below you will find additional information regarding growth at different ages and stages of a child\'s life, for which we have provided a brief overview.</string>

<string name="tv_vaccination_info">Vaccination Information</string>
<string name="tv_vaccination_content_one">For a few weeks after birth, babies have some protection from germs that cause diseases. This protection is passed from their mother through the placenta before birth. After a short period, this natural protection goes away.</string>
<string name="tv_vaccination_content_two">Vaccines help protect against many diseases that used to be much more common. Examples include tetanus, diphtheria, mumps, measles, pertussis (whooping cough), meningitis, and polio. Many of these infections can cause serious or life-threatening illnesses and may lead to lifelong health problems. Because of vaccines, many of these illnesses are now rare.</string>

<string name="tv_diet_info">Diet Information</string>

<string name="tv_diet_content">Healthy eating is not about strict dietary limitations, staying unrealistically thin, or depriving yourself of the foods you love. Rather, it’s about feeling great, having more energy, and stabilizing your mood. If you feel overwhelmed by all the conflicting nutrition and diet advice out there, you’re not alone. It seems that for every expert who tells you a certain food is good for you, you’ll find another saying exactly the opposite. But by using these simple tips, you can cut through the confusion and learn how to create a tasty, varied, and healthy diet.</string>


</resources>