<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageviewShowImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/image_description"
            android:focusable="true"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#96AA39"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hello_world"
                android:paddingRight="10dp"
                android:src="@drawable/ic_action_camera" />

            <Button
                android:id="@+id/updateImage"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:background="#96AA39"
                android:gravity="left|center_vertical"
                android:text="@string/button_take_photo"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/update_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/layout_background"
            android:hint="@string/et_name"
            android:padding="10dp" />

        <EditText
            android:id="@+id/update_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_background"
            android:hint="@string/et_date_of_birth"
            android:padding="10dp" />

        <EditText
            android:id="@+id/update_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_background"
            android:hint="@string/et_gender"
            android:padding="10dp" />

        <EditText
            android:id="@+id/update_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_background"
            android:hint="@string/et_height"
            android:padding="10dp" />

        <EditText
            android:id="@+id/update_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_background"
            android:hint="@string/et_weight"
            android:padding="10dp" />

        <EditText
            android:id="@+id/update_blood_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_background"
            android:hint="@string/et_bloodgroup"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="#96AA39"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:background="#96AA39"
                android:gravity="left|center_vertical"
                android:text="@string/button_update"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>