<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="#666666"
        android:gravity="center"
        android:text="@string/tv_add_vaccine"
        android:textColor="#fff"
        android:textSize="25sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/layout_background"
                android:gravity="center"
                android:hint="@string/et_name"
                android:padding="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/layout_background"
                android:gravity="center"
                android:hint="@string/et_date"
                android:padding="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/layout_background"
                android:gravity="center"
                android:hint="@string/et_time"
                android:padding="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/layout_background"
                android:gravity="center"
                android:hint="@string/et_status"
                android:padding="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_background"
                android:gravity="center"
                android:hint="@string/et_note"
                android:inputType="textMultiLine"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="#96AA39"
                android:gravity="center"
                android:onClick="createProfile"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/hello_world"
                    android:paddingRight="10dp"
                    android:src="@drawable/ic_action_save" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="left"
                    android:background="#96AA39"
                    android:gravity="left|center_vertical"
                    android:text="@string/button_save"
                    android:textColor="#fff"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>