<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_new_vaccine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/layout_background"
            android:hint="@string/et_name"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_new_vaccine_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_background"
            android:hint="@string/et_date"
            android:inputType="date"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_new_vaccine_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/layout_background"
            android:hint="@string/et_time"
            android:padding="10dp" />

        <CheckBox
            android:id="@+id/cb_new_vaccine_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/vaccination_given" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="#96AA39"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hello_world"
                android:paddingRight="10dp"
                android:src="@drawable/ic_action_save" />

            <Button
                android:id="@+id/button_new_vaccine"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:background="#96AA39"
                android:gravity="left|center_vertical"
                android:text="@string/button_save"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>